objects/CMPL123__AI_Suggestion_Data__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123__Accepted_Value_1__c</fullName>
        <label>Accepted Value 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Accepted_Value_2__c</fullName>
        <label>Accepted Value 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Accepted_Value_3__c</fullName>
        <label>Accepted Value 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Fifth_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fifth Match?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__First_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Match?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__Fourth_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fourth Match?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__Met_Threshold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Met Threshold?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__Optional_Text_Field_10_API__c</fullName>
        <label>Optional Text Field 10 API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Optional_Text_Field_10_Label__c</fullName>
        <label>Optional Text Field 10 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Optional_Text_Field_10__c</fullName>
        <label>Optional Text Field 10</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Optional_Text_Field_1_API__c</fullName>
        <label>Optional Text Field 1 API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Optional_Text_Field_1_Label__c</fullName>
        <label>Optional Text Field 1 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Optional_Text_Field_1__c</fullName>
        <label>Optional Text Field 1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Optional_Text_Field_2_API__c</fullName>
        <label>Optional Text Field 2 API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Optional_Text_Field_2_Label__c</fullName>
        <label>Optional Text Field 2 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Optional_Text_Field_2__c</fullName>
        <label>Optional Text Field 2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Parent_Object_API__c</fullName>
        <label>Parent Object API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Parent_Object_Label__c</fullName>
        <label>Parent Object Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Parent_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Parent Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Parent_Record_Name__c</fullName>
        <label>Parent Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Percentage_1__c</fullName>
        <label>Percentage 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CMPL123__Percentage_2__c</fullName>
        <label>Percentage 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CMPL123__Percentage_3__c</fullName>
        <label>Percentage 3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CMPL123__Proactive_Suggestion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proactive Suggestion?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__Raw_Percentage_1__c</fullName>
        <label>Raw Percentage 1</label>
        <precision>18</precision>
        <scale>17</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123__Raw_Percentage_2__c</fullName>
        <label>Raw Percentage 2</label>
        <precision>18</precision>
        <scale>17</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123__Raw_Percentage_3__c</fullName>
        <label>Raw Percentage 3</label>
        <precision>18</precision>
        <scale>17</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123__Second_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Second Match?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__Source_Text_Field_API__c</fullName>
        <label>Source Text Field API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Source_Text_Field_Label__c</fullName>
        <label>Source Text Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Source_Text__c</fullName>
        <label>Source Text</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Suggestion_1__c</fullName>
        <label>Suggestion 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Suggestion_2__c</fullName>
        <label>Suggestion 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Suggestion_3__c</fullName>
        <label>Suggestion 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Suggestions_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suggestions Applicable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__Target_Classification_Field_API__c</fullName>
        <label>Target Classification Field API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Target_Classification_Field_Label__c</fullName>
        <label>Target Classification Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Third_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Third Match?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__Workflow_status_triggered__c</fullName>
        <label>Workflow status triggered</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AI Suggestion Data</label>
    <listViews>
        <fullName>CMPL123__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123__Parent_Object_Label__c</columns>
        <columns>CMPL123__Parent_Record_Name__c</columns>
        <columns>CMPL123__Source_Text_Field_Label__c</columns>
        <columns>CMPL123__Target_Classification_Field_Label__c</columns>
        <columns>CMPL123__Suggestions_Applicable__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ASD-{0}</displayFormat>
        <label>AI Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Suggestion Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>